fix: adding backface-visiblity

--- a/src/views/css/style.css
+++ b/src/views/css/style.css
@@ -33,6 +33,7 @@ form {
   position: fixed;
   width: 256px;
   z-index: -1;
+  backface-visibility: hidden;
   transform: translateZ(0);
   will-change: left;
 }
